--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <link rel="stylesheet" href="css/style.css">
+ <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 </head>
 
 <body>
@@ -31,9 +32,17 @@
 
 <h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Welkom</h1>
 <h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Welkom</h1>
-<h1 style="text-align:center; padding:124;" class="w3-mobile hoofdmobile w3-hide-large w3-hide-medium" >Welkom</h1>
+<h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Welkom</h1>
 
-<div class="w3-card-4" style="width:25%; margin-left:37%;">
+<div class="w3-card-4 w3-hide-small" style="width:25%; margin-left:37%;">
+<img src="rsz_17553925_1354895621233136_4010857451985779955_n.png" style="width:100%"></img>
+	<div class="w3-container w3-white w3-center w3-mobile">
+		<h1>Hallo</h1>
+		<p>Mijn naam is Karam Khalil. Ik ben 17 jaar.</p>
+	</div>
+</div>
+
+<div class="w3-card-4 w3-hide-medium w3-mobile w3-hide-large" style="">
 <img src="rsz_17553925_1354895621233136_4010857451985779955_n.png" style="width:100%"></img>
 	<div class="w3-container w3-white w3-center">
 		<h1>Hallo</h1>
@@ -45,7 +54,7 @@
 
 <div class="w3-content w3-white">
 <div class="w3-container w3-section w3-content w3-padding-64">
-<h1 class="title">Test<span>Nog Test</span></h1>
+<h1 class="title">Test<span>Coming soon!</span></h1>
 </div>
 </div>
 
