--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <link rel="stylesheet" href="css/style.css">
  <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+ <title>Karam</title>
 </head>
 
 <body>
