--- a/dagverslag.html
+++ b/dagverslag.html
@@ -13,11 +13,11 @@
 <div class="w3-top">
 <div class="w3-bar w3-border w3-card-4 w3-blue">
 <a class="w3-bar-item w3-button w3-large w3-padding-large w3-hide-medium w3-hide-large w3-hover-white w3-text-white w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-	<a href="index.html" class="w3-bar-item w3-button w3-white w3-hover-white w3-large"><i class="fa fa-home"></i> Home</a>
+	<a href="index.html" class="w3-bar-item w3-button w3-hover-white w3-large"><i class="fa fa-home"></i> Home</a>
 	<div class="w3-dropdown-hover">
 		<a href="stage.html" class="w3-button w3-large w3-hover-white w3-hide-small" style="font-size:16px;">Stage <i class="fa fa-caret-down"></i></a>
 		<div class="w3-dropdown-content w3-blue w3-bar-block w3-card-4">
-			<a href="dagverslag.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Dagverslag</a>
+			<a href="dageverslag.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Dagverslag</a>
 		</div>
 	</div>
 	<a href="over_mij.html" class="w3-bar-item w3-button w3-right w3-hover-white w3-large w3-hide-small" style="font-size:16px">Over mij</a>
@@ -30,9 +30,9 @@
   <a href="over_mij.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Over mij</a>
 </div>
 
-<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Welkom</h1>
-<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Welkom</h1>
-<h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Welkom</h1>
+<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Dagverslag</h1>
+<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Dagverslag</h1>
+<h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Dagverslag</h1>
 
 <div class="w3-content w3-white">
 <div class="w3-container w3-section w3-content w3-padding-64">
