--- a/ar/over_mij.html
+++ b/ar/over_mij.html
@@ -1,6 +1,7 @@
 <DOCTYPE html!>
 <html>
 <head>
+ <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,14 +14,14 @@
 <div class="w3-top">
 <div class="w3-bar w3-border w3-card-4 w3-blue">
 <a class="w3-bar-item w3-button w3-large w3-padding-large w3-hide-medium w3-hide-large w3-hover-white w3-text-white w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-	<a href="index.html" class="w3-bar-item w3-button w3-white w3-hover-white w3-large"><i class="fa fa-home"></i> Home</a>
+	<a href="index.html" class="w3-bar-item w3-button w3-hover-white w3-large"><i class="fa fa-home"></i> Home</a>
 	<div class="w3-dropdown-hover">
 		<a href="stage.html" class="w3-button w3-large w3-hover-white w3-hide-small" style="font-size:16px;">Stage <i class="fa fa-caret-down"></i></a>
 		<div class="w3-dropdown-content w3-blue w3-bar-block w3-card-4">
 			<a href="dagverslag.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Dagverslag</a>
 		</div>
 	</div>
-	<a href="over_mij.html" class="w3-bar-item w3-button w3-right w3-hover-white w3-large w3-hide-small" style="font-size:16px">Over mij</a>
+	<a href="over_mij" class="w3-bar-item w3-button w3-right w3-hover-white w3-large w3-white w3-hide-small" style="font-size:16px">Over mij</a>
 </div>
 </div>
 
@@ -30,9 +31,27 @@
   <a href="over_mij.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Over mij</a>
 </div>
 
-<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Welkom</h1>
-<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Welkom</h1>
-<h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Welkom</h1>
+<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Over mij</h1>
+<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Over mij</h1>
+<h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Over mij</h1>
+
+<div class="w3-card-4 w3-hide-small" style="width:25%; margin-left:37%;">
+<img src="rsz_17553925_1354895621233136_4010857451985779955_n.png" style="width:100%"></img>
+	<div class="w3-container w3-white w3-center w3-mobile">
+		<h1>Hallo</h1>
+		<p>Mijn naam is Karam Khalil. Ik ben 17 jaar.</p>
+	</div>
+</div>
+
+<div class="w3-card-4 w3-hide-medium w3-mobile w3-hide-large" style="">
+<img src="rsz_17553925_1354895621233136_4010857451985779955_n.png" style="width:100%"></img>
+	<div class="w3-container w3-white w3-center">
+		<h1>Hallo</h1>
+		<p>Mijn naam is Karam Khalil. Ik ben 17 jaar.</p>
+	</div>
+</div>
+
+
 
 <div class="w3-content w3-white">
 <div class="w3-container w3-section w3-content w3-padding-64">
@@ -41,8 +60,8 @@
 </div>
 
 <footer class="w3-bar w3-blue w3-block">
-	<div class="w3-container w3-block">
-	<p>test <a href="#" class="w3-right">AR</a> </p> 	
+	<div class="w3-container">
+	<p>test </p>
 	</div>
 </footer>
 
