--- a/ar/dagverslag.html
+++ b/ar/dagverslag.html
@@ -37,13 +37,13 @@
 
 <div class="w3-content w3-white">
 <div class="w3-container w3-section w3-content w3-padding-64">
-<h1 class="title">Test<span>!قريبا</span></h1>
+<h1 class="title">تجربة<span>!قريباً</span></h1>
 </div>
 </div>
 
 <footer class="w3-bar w3-blue w3-block">
 	<div class="w3-container">
-	<p>test </p>
+	<p>تجربة <a href="../dagverslag.html" class="w3-right">NL</a></p>
 	</div>
 </footer>
 
