--- a/ar/index.html
+++ b/ar/index.html
@@ -27,23 +27,23 @@
 
 <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="stage.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Stage</a>
-  <a href="dagverslag.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Dagverslag</a>
-  <a href="over_mij.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Over mij</a>
+  <a href="dagverslag.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">التقرير اليومي</a>
+  <a href="over_mij.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">عن نفسي</a>
 </div>
 
-<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Welkom</h1>
-<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Welkom</h1>
-<h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Welkom</h1>
+<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >اهلاً و  سهلاً</h1>
+<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >اهلاً و سهلًا</h1>
+<h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >اهلاً و سهلاً</h1>
 
 <div class="w3-content w3-white">
 <div class="w3-container w3-section w3-content w3-padding-64">
-<h1 class="title">Test<span>Coming soon!</span></h1>
+<h1 class="title">تجربة<span>!قريبا</span></h1>
 </div>
 </div>
 
 <footer class="w3-bar w3-blue w3-block">
 	<div class="w3-container w3-block">
-	<p>test <a href="#" class="w3-right">NL</a> </p> 	
+	<p>تجربة <a href="../index.html" class="w3-right">NL</a> </p> 	
 	</div>
 </footer>
 
