--- a/dagverslag.html
+++ b/dagverslag.html
@@ -42,7 +42,7 @@
 
 <footer class="w3-bar w3-blue w3-block">
 	<div class="w3-container">
-	<p>test </p>
+	<p>test <a href="../GIPsite/ar/dagverslag.html" class="w3-right">AR</a></p>
 	</div>
 </footer>
 
