--- a/ar/over_mij.html
+++ b/ar/over_mij.html
@@ -14,40 +14,40 @@
 <div class="w3-top">
 <div class="w3-bar w3-border w3-card-4 w3-blue">
 <a class="w3-bar-item w3-button w3-large w3-padding-large w3-hide-medium w3-hide-large w3-hover-white w3-text-white w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-	<a href="index.html" class="w3-bar-item w3-button w3-hover-white w3-large"><i class="fa fa-home"></i> Home</a>
+	<a href="index.html" class="w3-bar-item w3-button w3-hover-white w3-large"><i class="fa fa-home"></i> الصفحة الرئيسية</a>
 	<div class="w3-dropdown-hover">
 		<a href="stage.html" class="w3-button w3-large w3-hover-white w3-hide-small" style="font-size:16px;">Stage <i class="fa fa-caret-down"></i></a>
 		<div class="w3-dropdown-content w3-blue w3-bar-block w3-card-4">
-			<a href="dagverslag.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Dagverslag</a>
+			<a href="dagverslag.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">التقرير اليومي</a>
 		</div>
 	</div>
-	<a href="over_mij" class="w3-bar-item w3-button w3-right w3-hover-white w3-large w3-white w3-hide-small" style="font-size:16px">Over mij</a>
+	<a href="over_mij" class="w3-bar-item w3-button w3-right w3-hover-white w3-large w3-white w3-hide-small" style="font-size:16px">عن نفسي</a>
 </div>
 </div>
 
 <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="stage.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Stage</a>
-  <a href="dagverslag.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Dagverslag</a>
-  <a href="over_mij.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Over mij</a>
+  <a href="dagverslag.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">التقرير اليومي</a>
+  <a href="over_mij.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">عن نفسي</a>
 </div>
 
-<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Over mij</h1>
-<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Over mij</h1>
-<h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Over mij</h1>
+<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >عن نفسي</h1>
+<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >عن نفسي</h1>
+<h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >عن نفسي</h1>
 
 <div class="w3-card-4 w3-hide-small" style="width:25%; margin-left:37%;">
 <img src="rsz_17553925_1354895621233136_4010857451985779955_n.png" style="width:100%"></img>
 	<div class="w3-container w3-white w3-center w3-mobile">
-		<h1>Hallo</h1>
-		<p>Mijn naam is Karam Khalil. Ik ben 17 jaar.</p>
+		<h1>مرحباً</h1>
+		<p>.اسمي كرم خليل. عمري 17 سنة</p>
 	</div>
 </div>
 
 <div class="w3-card-4 w3-hide-medium w3-mobile w3-hide-large" style="">
 <img src="rsz_17553925_1354895621233136_4010857451985779955_n.png" style="width:100%"></img>
 	<div class="w3-container w3-white w3-center">
-		<h1>Hallo</h1>
-		<p>Mijn naam is Karam Khalil. Ik ben 17 jaar.</p>
+		<h1>مرحباً</h1>
+		<p>.اسمي كرم خليل. عمري 17 سنة</p>
 	</div>
 </div>
 
@@ -55,13 +55,13 @@
 
 <div class="w3-content w3-white">
 <div class="w3-container w3-section w3-content w3-padding-64">
-<h1 class="title">Test<span>Coming soon!</span></h1>
+<h1 class="title">تجربة<span>!قريباً</span></h1>
 </div>
 </div>
 
 <footer class="w3-bar w3-blue w3-block">
 	<div class="w3-container">
-	<p>test </p>
+	<p>تجربة <a href="../over_mij.html" class="w3-right">NL</a></p>
 	</div>
 </footer>
 
