--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <footer class="w3-bar w3-blue w3-block">
 	<div class="w3-container w3-block">
-	<p>test <a href="#" class="w3-right">AR</a> </p> 	
+	<p>test <a href="../GIPsite/ar/index.html" class="w3-right">AR</a> </p> 	
 	</div>
 </footer>
 
