--- a/over_mij.html
+++ b/over_mij.html
@@ -60,7 +60,7 @@
 
 <footer class="w3-bar w3-blue w3-block">
 	<div class="w3-container">
-	<p>test </p>
+	<p>test <a href="../GIPsite/ar/over_mij.html" class="w3-right">AR</a></p>
 	</div>
 </footer>
 
