--- a/ar/over_mij.html
+++ b/ar/over_mij.html
@@ -36,7 +36,7 @@
 <h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >عن نفسي</h1>
 
 <div class="w3-card-4 w3-hide-small" style="width:25%; margin-left:37%;">
-<img src="rsz_17553925_1354895621233136_4010857451985779955_n.png" style="width:100%"></img>
+<img src="./img/rsz_17553925_1354895621233136_4010857451985779955_n.png" style="width:100%"></img>
 	<div class="w3-container w3-white w3-center w3-mobile">
 		<h1>مرحباً</h1>
 		<p>.اسمي كرم خليل. عمري 17 سنة</p>
@@ -44,7 +44,7 @@
 </div>
 
 <div class="w3-card-4 w3-hide-medium w3-mobile w3-hide-large" style="">
-<img src="rsz_17553925_1354895621233136_4010857451985779955_n.png" style="width:100%"></img>
+<img src="./img/rsz_17553925_1354895621233136_4010857451985779955_n.png" style="width:100%"></img>
 	<div class="w3-container w3-white w3-center">
 		<h1>مرحباً</h1>
 		<p>.اسمي كرم خليل. عمري 17 سنة</p>
