--- a/over_mij.html
+++ b/over_mij.html
@@ -35,7 +35,7 @@
 <h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Over mij</h1>
 
 <div class="w3-card-4 w3-hide-small" style="width:25%; margin-left:37%;">
-<img src="rsz_17553925_1354895621233136_4010857451985779955_n.png" style="width:100%"></img>
+<img src="./img/rsz_17553925_1354895621233136_4010857451985779955_n.jpg" style="width:100%"></img>
 	<div class="w3-container w3-white w3-center w3-mobile">
 		<h1>Hallo</h1>
 		<p>Mijn naam is Karam Khalil. Ik ben 17 jaar.</p>
@@ -43,7 +43,7 @@
 </div>
 
 <div class="w3-card-4 w3-hide-medium w3-mobile w3-hide-large" style="">
-<img src="rsz_17553925_1354895621233136_4010857451985779955_n.png" style="width:100%"></img>
+<img src="./img/rsz_17553925_1354895621233136_4010857451985779955_n.jpg" style="width:100%"></img>
 	<div class="w3-container w3-white w3-center">
 		<h1>Hallo</h1>
 		<p>Mijn naam is Karam Khalil. Ik ben 17 jaar.</p>
