--- a/dagverslag.html
+++ b/dagverslag.html
@@ -36,27 +36,27 @@
 
 <div class="w3-content w3-white w3-panel">
 <div class="w3-container w3-section w3-content w3-padding-64">
- <button onclick="myFunction('Demo1')" class="w3-button w3-block w3-left-align w3-padding-large"><span>2017-10-02</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
- <div id="Demo1" class="w3-container w3-hide">
+ <button onclick="myFunction('Demo1')" class="w3-button w3-block w3-left-align w3-padding-large"><span class="w3-left">2017-10-02</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
+ <div id="Demo1" class="w3-container w3-hide"> 
 	<p>coming soon!</p>		
 </div>
 
-<button onclick="myFunction('Demo2')" class="w3-button w3-block w3-left-align w3-padding-large"><span>2017-10-03</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
+<button onclick="myFunction('Demo2')" class="w3-button w3-block w3-left-align w3-padding-large"><span class="w3-left">2017-10-03</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo2" class="w3-container w3-hide">
 	<p>coming soon!</p>
  </div>
  
- <button onclick="myFunction('Demo3')" class="w3-button w3-block w3-left-align w3-padding-large"><span>2017-10-04</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
+ <button onclick="myFunction('Demo3')" class="w3-button w3-block w3-left-align w3-padding-large"><span class="w3-left">2017-10-04</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo3" class="w3-container w3-hide">
 	<p>coming soon!</p>
  </div>
  
- <button onclick="myFunction('Demo4')" class="w3-button w3-block w3-left-align w3-padding-large"><span>2017-10-05</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
+ <button onclick="myFunction('Demo4')" class="w3-button w3-block w3-left-align w3-padding-large"><span class="w3-left">2017-10-05</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo4" class="w3-container w3-hide">
 	<p>coming soon!</p>
  </div>
  
- <button onclick="myFunction('Demo5')" class="w3-button w3-block w3-left-align w3-padding-large"><span>2017-10-06</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
+ <button onclick="myFunction('Demo5')" class="w3-button w3-block w3-left-align w3-padding-large"><span class="w3-left">2017-10-06</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo5" class="w3-container w3-hide">
 	<p>coming soon!</p>
  </div>
