--- a/dagverslag.html
+++ b/dagverslag.html
@@ -18,6 +18,7 @@
 		<a href="stage.html" class="w3-button w3-large w3-hover-white w3-hide-small" style="font-size:16px;">Stage <i class="fa fa-caret-down"></i></a>
 		<div class="w3-dropdown-content w3-blue w3-bar-block w3-card-4">
 			<a href="dageverslag.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Dagverslag</a>
+			<a href="fotoreportage.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Fotoreportage</a>
 		</div>
 	</div>
 	<a href="over_mij.html" class="w3-bar-item w3-button w3-right w3-hover-white w3-large w3-hide-small" style="font-size:16px">Over mij</a>
@@ -27,6 +28,7 @@
 <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="stage.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Stage</a>
   <a href="dagverslag.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Dagverslag</a>
+  <a href="fotoreportage.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Fotoreportage</a>
   <a href="over_mij.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Over mij</a>
 </div>
 
@@ -71,6 +73,7 @@
 </footer>
 
 <script>
+/*
 function myFunction() {
     var x = document.getElementById("navDemo");
     if (x.className.indexOf("w3-show") == -1) {
@@ -79,6 +82,7 @@ function myFunction() {
         x.className = x.className.replace(" w3-show", "");
     }
 }
+*/
 
 var modal = document.getElementById('ticketModal');
 window.onclick = function(event) {
@@ -88,6 +92,9 @@ window.onclick = function(event) {
 }
 
 function myFunction(id) {
+	if (id === undefined) {
+		id = "navDemo";
+	}
     var x = document.getElementById(id);
     if (x.className.indexOf("w3-show") == -1) {
         x.className += " w3-show";
