--- a/fotoreportage.html
+++ b/fotoreportage.html
@@ -13,7 +13,7 @@
 <div class="w3-top">
 <div class="w3-bar w3-border w3-card-4 w3-blue">
 <a class="w3-bar-item w3-button w3-large w3-padding-large w3-hide-medium w3-hide-large w3-hover-white w3-text-white w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-	<a href="index.html" class="w3-bar-item w3-button w3-white w3-hover-white w3-large"><i class="fa fa-home"></i> Home</a>
+	<a href="index.html" class="w3-bar-item w3-button w3-hover-white w3-large"><i class="fa fa-home"></i> Home</a>
 	<div class="w3-dropdown-hover">
 		<a href="stage.html" class="w3-button w3-large w3-hover-white w3-hide-small" style="font-size:16px;">Stage <i class="fa fa-caret-down"></i></a>
 		<div class="w3-dropdown-content w3-blue w3-bar-block w3-card-4">
@@ -32,19 +32,42 @@
   <a href="over_mij.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Over mij</a>
 </div>
 
-<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Welkom</h1>
-<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Welkom</h1>
-<h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Welkom</h1>
+<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Fotoreportage</h1>
+<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Fotoreportage</h1>
+<h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Fotoreportage</h1>
 
-<div class="w3-content w3-white">
-<div class="w3-container w3-section w3-content w3-padding-64">
-<h1 class="title">Test<span>Coming soon!</span></h1>
+<div class="w3-content w3-panel w3-display-container">
+<div class="w3-display-container mySlides">
+  <img src="./img/img_fjords.jpg" style="width:100%">
+  <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
+    Test!
+  </div>
 </div>
+<div class="w3-display-container mySlides">
+  <img src="./img/img_forest.jpg" style="width:100%">
+  <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
+    Test!
+  </div>
+</div>
+<div class="w3-display-container mySlides">
+  <img src="./img/img_lights.jpg" style="width:100%">
+  <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
+    Test!
+  </div>
+</div>
+<div class="w3-display-container mySlides">
+  <img src="./img/img_mountains.jpg" style="width:100%">
+  <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
+    Test!
+  </div>
 </div>
 
+<button class="w3-button w3-display-right w3-blue" onclick="plusDivs(+1)">&#10095;</button>
+<button class="w3-button w3-display-left w3-blue" onclick="plusDivs(-1)">&#10094;</button>
+</div>
 <footer class="w3-bar w3-blue w3-block">
 	<div class="w3-container w3-block">
-	<p>test <a href="../GIPsite/ar/index.html" class="w3-right">AR</a> </p> 	
+	<p>test <a href="#" class="w3-right">AR</a> </p> 	
 	</div>
 </footer>
 
@@ -63,6 +86,24 @@ window.onclick = function(event) {
   if (event.target == modal) {
     modal.style.display = "none";
   }
+}
+
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+    showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    if (n > x.length) {slideIndex = 1} 
+    if (n < 1) {slideIndex = x.length} ;
+    for (i = 0; i < x.length; i++) {
+        x[i].style.display = "none"; 
+    }
+    x[slideIndex-1].style.display = "block"; 
 }
 </script>
 
