--- a/stage.html
+++ b/stage.html
@@ -18,6 +18,7 @@
 		<a href="stage.html" class="w3-button w3-large w3-hover-white w3-white w3-hide-small" style="font-size:16px;">Stage <i class="fa fa-caret-down"></i></a>
 		<div class="w3-dropdown-content w3-blue w3-bar-block w3-card-4">
 			<a href="dagverslag.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Dagverslag</a>
+			<a href="fotoreportage.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Fotoreportage</a>
 		</div>
 	</div>
 	<a href="over_mij.html" class="w3-bar-item w3-button w3-right w3-hover-white w3-large w3-hide-small" style="font-size:16px">Over mij</a>
@@ -27,7 +28,9 @@
 <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="stage.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Stage</a>
   <a href="dagverslag.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Dagverslag</a>
+  <a href="fotoreportage.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Fotoreportage</a>
   <a href="over_mij.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Over mij</a>
+  
 </div>
 
 <h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Stage</h1>
