--- a/dagverslag.html
+++ b/dagverslag.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class="w3-top">
-<div class="w3-bar w3-border w3-card-4 w3-blue">
+<div class="w3-bar w3-border-blue w3-card-4 w3-blue">
 <a class="w3-bar-item w3-button w3-large w3-padding-large w3-hide-medium w3-hide-large w3-hover-white w3-text-white w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
 	<a href="index.html" class="w3-bar-item w3-button w3-hover-white w3-large"><i class="fa fa-home"></i> Home</a>
 	<div class="w3-dropdown-hover">
@@ -38,7 +38,7 @@
 
 <div class="w3-content w3-white w3-panel">
 <div class="w3-container w3-section w3-content w3-padding-64">
- <button onclick="myFunction('Demo1')" class="w3-button w3-block w3-left-align w3-padding-large"><span class="w3-left">2017-10-02</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
+ <button onclick="myFunction('Demo1')" class="w3-button w3-blue w3-block w3-left-align w3-padding-large"><span class="w3-left">2017-10-02</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo1" class="w3-container w3-hide"> 
 	<p>coming soon!</p>		
 </div>
@@ -48,7 +48,7 @@
 	<p>coming soon!</p>
  </div>
  
- <button onclick="myFunction('Demo3')" class="w3-button w3-block w3-left-align w3-padding-large"><span class="w3-left">2017-10-04</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
+ <button onclick="myFunction('Demo3')" class="w3-button w3-block w3-blue w3-left-align w3-padding-large"><span class="w3-left">2017-10-04</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo3" class="w3-container w3-hide">
 	<p>coming soon!</p>
  </div>
@@ -58,7 +58,7 @@
 	<p>coming soon!</p>
  </div>
  
- <button onclick="myFunction('Demo5')" class="w3-button w3-block w3-left-align w3-padding-large"><span class="w3-left">2017-10-06</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
+ <button onclick="myFunction('Demo5')" class="w3-button w3-block w3-blue w3-left-align w3-padding-large"><span class="w3-left">2017-10-06</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo5" class="w3-container w3-hide">
 	<p>coming soon!</p>
  </div>
