--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class="w3-top">
-<div class="w3-bar w3-border w3-card-4 w3-blue">
+<div class="w3-bar w3-border-blue w3-card-4 w3-blue">
 <a class="w3-bar-item w3-button w3-large w3-padding-large w3-hide-medium w3-hide-large w3-hover-white w3-text-white w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
 	<a href="index.html" class="w3-bar-item w3-button w3-white w3-hover-white w3-large"><i class="fa fa-home"></i> Home</a>
 	<div class="w3-dropdown-hover">
