--- a/stage.html
+++ b/stage.html
@@ -37,6 +37,10 @@
 <h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Stage</h1>
 <h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Stage</h1>
 
+<div class="w3-content w3-container w3-panel">
+<a class="w3-card w3-blue w3-hover-shadow w3-jumbo w3-left w3-padding-large" href="dagverslag.html" style="text-decoration:none">Dagverslag</a>
+<a class="w3-card w3-blue w3-hover-shadow w3-jumbo w3-right w3-padding-large" href="fotoreportage.html" style="text-decoration:none">Fotoreportage</a>
+</div>
 
 <footer class="w3-bar w3-blue w3-block">
 	<div class="w3-container">
