--- a/stage.html
+++ b/stage.html
@@ -42,7 +42,7 @@
 <a class="w3-card w3-blue w3-hover-shadow w3-jumbo w3-right w3-padding-large" href="fotoreportage.html" style="text-decoration:none">Fotoreportage</a>
 </div>
 
-<footer class="w3-bar w3-blue w3-block">
+<footer class="w3-bar w3-display-bottommiddle w3-blue w3-block">
 	<div class="w3-container">
 	<p>test <a href="../GIPsite/ar/stage.html" class="w3-right">AR</a></p>
 	</div>
