footer stage.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <link rel="stylesheet" href="css/style.css">
- <link href="https://fonts.googleapis.com/css?family=Chewy|Indie+Flower" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Chewy|Indie+Flower|Dancing+Script" rel="stylesheet">
  <title>Karam</title>
 </head>
 
@@ -15,7 +15,7 @@
 <a class="w3-bar-item w3-button w3-large w3-padding-large w3-hide-medium w3-hide-large w3-hover-white w3-text-white w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
 	<a href="index.html" class="w3-bar-item w3-button w3-white w3-hover-white w3-large"><i class="fa fa-home"></i> Home</a>
 	<div class="w3-dropdown-hover">
-		<a href="stage.html" class="w3-button w3-large w3-hover-white w3-hide-small" style="font-size:16px;">Stage <i class="fa fa-caret-down"></i></a>
+		<a href="stage.html" class="w3-button w3-large w3-hover-white w3-large w3-hide-small" style="font-size:16px;">Stage <i class="fa fa-caret-down"></i></a>
 		<div class="w3-dropdown-content w3-blue w3-bar-block w3-card-4">
 			<a href="dagverslag.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Dagverslag</a>
 			<a href="fotoreportage.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Fotoreportage</a>
