--- a/stage.html
+++ b/stage.html
@@ -2,14 +2,16 @@
 <html>
 <head>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
+ <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
  <link rel="stylesheet" href="css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Chewy|Indie+Flower" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Chewy|Indie+Flower" rel="stylesheet">
  <title>Karam</title>
 </head>
 
 <body>
+<header>
 <div class="w3-top">
 <div class="w3-bar w3-border-blue w3-card-4 w3-blue">
 <a class="w3-bar-item w3-button w3-large w3-padding-large w3-hide-medium w3-hide-large w3-hover-white w3-text-white w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
@@ -32,21 +34,27 @@
   <a href="over_mij.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Over mij</a>
   
 </div>
-
+</header>
+<main>
 <h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Stage</h1>
 <h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Stage</h1>
 <h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Stage</h1>
 
 <div class="w3-content w3-container w3-panel">
-<a class="w3-card w3-blue w3-hover-shadow w3-jumbo w3-left w3-padding-large" href="dagverslag.html" style="text-decoration:none">Dagverslag</a>
-<a class="w3-card w3-blue w3-hover-shadow w3-jumbo w3-right w3-padding-large" href="fotoreportage.html" style="text-decoration:none">Fotoreportage</a>
+<a class="w3-card w3-blue w3-hover-shadow w3-mobile w3-jumbo w3-left w3-padding-large" href="dagverslag.html" style="text-decoration:none">Dagverslag</a>
+<a class="w3-card w3-blue w3-hover-shadow w3-mobile w3-jumbo w3-right w3-padding-large" href="fotoreportage.html" style="text-decoration:none">Fotoreportage</a>
 </div>
 
-<footer class="w3-bar w3-display-bottommiddle w3-blue w3-block">
-	<div class="w3-container">
-	<p>test <a href="../GIPsite/ar/stage.html" class="w3-right">AR</a></p>
-	</div>
-</footer>
+</main>
+
+	<footer class="page-footer blue">       
+         <div class="footer-copyright">
+            <div class="container">
+            © 2017 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+			</div>
+         </div>
+    </footer>
 
 <script>
 function myFunction() {
