--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE html!>
 <html>
 <head>
+ <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -38,7 +39,7 @@
 
 <div class="w3-content w3-white">
 <div class="w3-container w3-section w3-content w3-padding-64">
-<h1 class="title">Test<span>Coming soon!</span></h1>
+<p><b>Welkom</b> op mijn website. Mijn naam is Karam Khalil, ik ben 17 jaar oud,  kom uit Syrië en  studeer IT en Netwerken aan het Immaculata Instituut. Ondertussen ben ik al ongeveer twee jaar maanden in België. Ik heb deze richting gekozen omdat ik graag met computers  werk. Ik zwem graag en ik kijk graag films en tv-series. In de toekomst ga ik waarschijnlijk informatica studeren. Op deze site vindt u alles wat ik geleerd heb, onder de Stage-tab vindt u  dagverslagen over wat ik gedaan heb tijdens mijn stage en ook vindt u een fotoreportage. Ten slotte voor meer informatie over wie ik ben,  kunt u op “over mij” klikken. Ik wens u nog veel leesplezier.</p>
 </div>
 </div>
 
