--- a/dagverslag.html
+++ b/dagverslag.html
@@ -1,6 +1,7 @@
 <DOCTYPE html!>
 <html>
 <head>
+ <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -40,27 +41,31 @@
 <div class="w3-container w3-section w3-content w3-padding-64">
  <button onclick="myFunction('Demo1')" class="w3-button w3-blue w3-block w3-left-align w3-padding-large"><span class="w3-left">2017-10-02</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo1" class="w3-container w3-hide"> 
-	<p>coming soon!</p>		
+	<p>Mijn stagebegeleider heeft een telefoon gekregen dat er een probleem is dus ik heb met hem gegaan naar de plaats waar de probleem is en de probleem was dat de identiteitskaart lezer werkt niet dus hij heeft een nieuw software geïnstalleerd.
+Wij hebben een tour gedaan in de gebouw van de gemeente en hij heeft me voorgesteld aan de medewerkers in de gemeente.</p>		
 </div>
 
 <button onclick="myFunction('Demo2')" class="w3-button w3-block w3-left-align w3-padding-large"><span class="w3-left">2017-10-03</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo2" class="w3-container w3-hide">
-	<p>coming soon!</p>
+	<p>Ik heb vandaag aan mijn case study gewerkt en het is bijna klaar.
+Na de middag hebben we het ciPort datacenter bezocht. <a href="http://www.cipalschaubroeck.be/locations/ciport-datacenter_gebouw-volta_zaal-jupiter/">http://www.cipalschaubroeck.be/locations/ciport-datacenter_gebouw-volta_zaal-jupiter/</a> , <a href="http://www.ciport.be/">http://www.ciport.be/</a></p> 
  </div>
  
  <button onclick="myFunction('Demo3')" class="w3-button w3-block w3-blue w3-left-align w3-padding-large"><span class="w3-left">2017-10-04</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo3" class="w3-container w3-hide">
-	<p>coming soon!</p>
+	<p>We hebben vandaag de computers waar de mensen op kan stemmen gechecked. Zij checken het elk jaar.</p>
+	<img src="https://dsocdn.akamaized.net/Assets/Images_Upload/2014/04/28/4cb64098-ceed-11e3-820c-0965cfdf42d7_web_scale_0.0608766_0.0608766__.JPG?maxheight=416&maxwidth=568"></img>
  </div>
  
  <button onclick="myFunction('Demo4')" class="w3-button w3-block w3-left-align w3-padding-large"><span class="w3-left">2017-10-05</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo4" class="w3-container w3-hide">
-	<p>coming soon!</p>
+	<p>Wij zijn vandaag naar de lagere school in Halle geweest. Er was een probleem met de deuren. De deuren zijn met een elektrische sleutel gesloten en het opent met een kaart. Het probleem met de deur was dat de kaartlezer niet goed werkt en zij konden het probleem niet uitzoeken.
+En dan heeft mijn stagebegeleider een telefoon toegevoegd aan het netwerk van de schoo</p>
  </div>
  
  <button onclick="myFunction('Demo5')" class="w3-button w3-block w3-blue w3-left-align w3-padding-large"><span class="w3-left">2017-10-06</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
  <div id="Demo5" class="w3-container w3-hide">
-	<p>coming soon!</p>
+	<p>Ik heb vandaag niks speciaal gedaan want ik had een halve dag omdat ik gisteren tot 20:00 ben gebleven.</p>
  </div>
 </div>
 </div>
@@ -68,7 +73,9 @@
 
 <footer class="w3-bar w3-blue w3-block">
 	<div class="w3-container">
-	<p>test <a href="../GIPsite/ar/dagverslag.html" class="w3-right">AR</a></p>
+		<p>© 2017 Karam Khalil <a href="../GIPsite/ar/stage.html" class="w3-right">AR</a></p>
+	<a href="https://github.com/karamk-immalle"><i style="margin: 0 0 10px 650px" class="fa fa-github w3-xlarge w3-hover-opacity w3-hide-small w3-hide-medium"></i></a>
+	<a href="https://github.com/karamk-immalle"><i style="margin: 0 0 10px 250px" class="fa fa-github w3-xlarge w3-hover-opacity w3-hide-large"></i></a>
 	</div>
 </footer>
 
