--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 
 <footer class="w3-bar w3-blue w3-block">
 	<div class="w3-container w3-block">
-	<p>test <a href="../GIPsite/ar/index.html" class="w3-right">AR</a> </p> 	
+		<p>© 2017 Karam Khalil <a href="../GIPsite/ar/index.html" class="w3-right">AR</a></p>
+	<a href="https://github.com/karamk-immalle"><i style="margin: 0 0 10px 650px" class="fa fa-github w3-xlarge w3-hover-opacity w3-hide-small w3-hide-medium"></i></a>
+	<a href="https://github.com/karamk-immalle"><i style="margin: 0 0 10px 250px" class="fa fa-github w3-xlarge w3-hover-opacity w3-hide-large"></i></a> 	
 	</div>
 </footer>
 
