--- a/stage.html
+++ b/stage.html
@@ -1,10 +1,10 @@
 <DOCTYPE html!>
 <html>
 <head>
+<meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
  <link rel="stylesheet" href="css/style.css">
  <link href="https://fonts.googleapis.com/css?family=Chewy|Indie+Flower" rel="stylesheet">
  <title>Karam</title>
@@ -35,27 +35,38 @@
   
 </div>
 </header>
-<main>
-<h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Stage</h1>
+
+<h1 style="text-align:center; padding:124;"; class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Stage</h1>
 <h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Stage</h1>
 <h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Stage</h1>
 
-<div class="w3-content w3-container w3-panel">
+<div class="w3-blue w3-container w3-content">
+<p> Ik heb een stage gedaan bij de Gemeente Zoersel en hier onder vindt u een dagverslag over wat ik daar gedaan heb en een fotoreportage.</p>
+</div>
+
+<div style="padding:124;" class=" w3-container w3-panel w3-hide-medium w3-hide-small">
 <a class="w3-card w3-blue w3-hover-shadow w3-mobile w3-jumbo w3-left w3-padding-large" href="dagverslag.html" style="text-decoration:none">Dagverslag</a>
 <a class="w3-card w3-blue w3-hover-shadow w3-mobile w3-jumbo w3-right w3-padding-large" href="fotoreportage.html" style="text-decoration:none">Fotoreportage</a>
 </div>
+<div class="w3-container w3-panel w3-mobile w3-hide-large">
+<a class="w3-card w3-blue w3-hover-shadow w3-mobile w3-panel w3-padding-large " href="dagverslag.html" style="text-decoration:none;">Dagverslag</a>
+<a class="w3-card w3-blue w3-hover-shadow w3-mobile w3-panel w3-padding-large " href="fotoreportage.html" style="text-decoration:none">Fotoreportage</a>
+</div>
+<footer class="w3-bar w3-blue w3-hide-small w3-hide-medium w3-block">
+	<div class="w3-container w3-block">
+	<p>© 2017 Karam Khalil <a href="../GIPsite/ar/stage.html" class="w3-right">AR</a></p>
+	<a href="https://github.com/karamk-immalle"><i style="margin: 0 0 10px 650px" class="fa fa-github w3-xlarge w3-hover-opacity w3-hide-small w3-hide-medium"></i></a>
+	<a href="https://github.com/karamk-immalle"><i style="margin: 0 0 10px 250px" class="fa fa-github w3-xlarge w3-hover-opacity w3-hide-large"></i></a>
+	</div>
+</footer>
 
-</main>
-
-	<footer class="page-footer blue">       
-         <div class="footer-copyright">
-            <div class="container">
-            © 2017 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-			</div>
-         </div>
-    </footer>
-
+<footer class="w3-bar w3-blue w3-bottom w3-hide-large w3-block">
+	<div class="w3-container w3-block">
+	<p>© 2017 Karam Khalil <a href="../GIPsite/ar/stage.html" class="w3-right">AR</a></p>
+	<a href="https://github.com/karamk-immalle"><i style="margin: 0 0 10px 650px" class="fa fa-github w3-xlarge w3-hover-opacity w3-hide-small w3-hide-medium"></i></a>
+	<a href="https://github.com/karamk-immalle"><i style="margin: 0 0 10px 250px" class="fa fa-github w3-xlarge w3-hover-opacity w3-hide-large"></i></a>
+	</div>
+</footer>
 <script>
 function myFunction() {
     var x = document.getElementById("navDemo");
