--- a/fotoreportage.html
+++ b/fotoreportage.html
@@ -1,6 +1,7 @@
 <DOCTYPE html!>
 <html>
 <head>
+<meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,29 +37,49 @@
 <h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Fotoreportage</h1>
 <h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Fotoreportage</h1>
 
-<div class="w3-content w3-panel w3-display-container">
+<div class="w3-blue w3-content w3-container">
+<p>U kunt de volledige presentatie bekijken door <a href="http://prezi.com/shj-f1wkqnqo/?utm_campaign=share&utm_medium=copy">hier</a> te klikken</p>
+</div>
+
+<div style="padding:100px;" class="w3-content w3-panel w3-display-container">
 <div class="w3-display-container mySlides">
-  <img src="./img/img_fjords.jpg" style="width:100%">
+  <img src="./img/IMG_1.jpg" style="width:100%; transform:rotate(180deg);">
   <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
-    Test!
+    Eerste dag op stage: Het is een groot gebouw. Ik was er nog maar een keer geweest. Ik was nerveus.
   </div>
 </div>
 <div class="w3-display-container mySlides">
-  <img src="./img/img_forest.jpg" style="width:100%">
+  <img src="./img/IMG_2.jpg" style="width:100%">
   <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
-    Test!
+    Dat was mijn bureau. Ik heb mijn eigen laptop meegebracht. Mijn stagebegeleider zat altijd naast mij.
   </div>
 </div>
 <div class="w3-display-container mySlides">
-  <img src="./img/img_lights.jpg" style="width:100%">
+  <img src="./img/IMG_3.jpg" style="width:50%; margin: 0 0 100px 200px; transform:rotate(90deg);">
   <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
-    Test!
+    Middagpauze:
+Ik was mijn boterham aan het eten. Het is Syrisch brood en er zit tijm en sesamzaadjes met olie tussen. De middagpauze duurt een uur, hij begint om 12:30 en eindigt om 13:30.
   </div>
 </div>
 <div class="w3-display-container mySlides">
-  <img src="./img/img_mountains.jpg" style="width:100%">
+  <img src="./img/IMG_4.jpg" style="width:100%; transform:rotate(90deg);">
   <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
-    Test!
+    Ik heb hun geholpen om deze computers te testen. Het zijn stemcomputers.
+  </div>
+</div>
+
+<div class="w3-display-container mySlides">
+  <img src="./img/IMG_5.jpg" style="width:100%; transform:rotate(90deg);">
+</div>
+
+<div class="w3-display-container mySlides">
+  <img src="./img/IMG_6.jpg" style="width:100%; transform:rotate(90deg);">
+</div>
+
+<div class="w3-display-container mySlides">
+  <img src="./img/IMG_7.jpg" style="width:100%; transform: rotate(180deg);">
+  <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
+    Terug na een week op stage: dit is mijn bushalte. Ik was blij want het was een toffe week en ik voelde me als iemand die in de gemeente werkt en niet als iemand die iets nodig heeft.
   </div>
 </div>
 
@@ -67,7 +88,9 @@
 </div>
 <footer class="w3-bar w3-blue w3-block">
 	<div class="w3-container w3-block">
-	<p>test <a href="#" class="w3-right">AR</a> </p> 	
+		<p>© 2017 Karam Khalil <a href="../GIPsite/ar/index.html" class="w3-right">AR</a></p>
+	<a href="https://github.com/karamk-immalle"><i style="margin: 0 0 10px 650px" class="fa fa-github w3-xlarge w3-hover-opacity w3-hide-small w3-hide-medium"></i></a>
+	<a href="https://github.com/karamk-immalle"><i style="margin: 0 0 10px 250px" class="fa fa-github w3-xlarge w3-hover-opacity w3-hide-large"></i></a> 	
 	</div>
 </footer>
 
