--- a/over_mij.html
+++ b/over_mij.html
@@ -1,6 +1,7 @@
 <DOCTYPE html!>
 <html>
 <head>
+<meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,34 +36,87 @@
 <h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-medium hoofd" >Over mij</h1>
 <h1 style="text-align:center; padding:124;" class="w3-mobile w3-hide-small w3-hide-large hoofdmedium" >Over mij</h1>
 <h1 class="w3-center w3-mobile hoofdmobile w3-hide-large w3-hide-medium w3-padding-64" >Over mij</h1>
-
-<div class="w3-card-4 w3-hide-small" style="width:25%; margin-left:37%;">
+<div class="w3-content w3-panel">
+<div class="w3-card-4 w3-hide-small" style="width:50%; margin-left:25%;">
 <img src="./img/rsz_17553925_1354895621233136_4010857451985779955_n.jpg" style="width:100%"></img>
 	<div class="w3-container w3-white w3-center w3-mobile">
 		<h1>Hallo</h1>
-		<p>Mijn naam is Karam Khalil. Ik ben 17 jaar.</p>
+		<p>Mijn naam is Karam Khalil. Ik ben 17 jaar oud.</p>
 	</div>
 </div>
 
-<div class="w3-card-4 w3-hide-medium w3-mobile w3-hide-large" style="">
+<div class="w3-card-4 w3-hide-small" style="width:50%; margin-left:25%;">
+<img src="./img/syrischevlag.jpg" style="width:100%"></img>
+	<div class="w3-container w3-white w3-center w3-mobile">		
+		<p>Ik kom uit Syrië</p>
+	</div>
+</div>
+
+<div class="w3-card-4 w3-hide-small" style="width:50%; margin-left:25%;">
+<img src="./img/belgischevlag.jpg" style="width:100%"></img>
+	<div class="w3-container w3-white w3-center w3-mobile">		
+		<p>Ik ben naar België gekomen op 06/02/2016</p>
+	</div>
+</div>
+
+<div class="w3-card-4 w3-hide-small" style="width:50%; margin-left:25%;">
+<img src="./img/hivsetlogo.jpg" style="width:100%"></img>
+	<div class="w3-container w3-white w3-center w3-mobile">		
+		<p>Ik heb Nederlands geleerd in het OKAN-onderwijs op HIVSET Turnhout. Ben naar daar daar geweest op 20/02/2016, en ben ongeveer 8 maanden daar gebleven.</p>
+	</div>
+</div>
+
+<div class="w3-card-4 w3-hide-small" style="width:50%; margin-left:25%;">
+<img src="./img/immaculatalogo.jpg" style="width:100%"></img>
+	<div class="w3-container w3-white w3-center w3-mobile">		
+		<p>Ik studeer nu IT en Netwerken aan het Immaculata Instituut. Ik ben naar hier gekomen op 09/01/2017.</p>
+	</div>
+</div>
+
+</div>
+<!--mobile-->
+<div class="w3-card-4 w3-panel w3-hide-medium w3-mobile w3-hide-large">
 <img src="./img/rsz_17553925_1354895621233136_4010857451985779955_n.jpg" style="width:100%"></img>
 	<div class="w3-container w3-white w3-center">
 		<h1>Hallo</h1>
-		<p>Mijn naam is Karam Khalil. Ik ben 17 jaar.</p>
+		<p>Mijn naam is Karam Khalil. Ik ben 17 jaar oud.</p>
+	</div>
+</div>
+
+<div class="w3-card-4 w3-panel w3-mobile w3-hide-large w3-hide-medium">
+<img src="./img/syrischevlag.jpg" style="width:100%"></img>
+	<div class="w3-container w3-white w3-center w3-mobile">		
+		<p>Ik kom uit Syrië</p>
+	</div>
+</div>
+
+<div class="w3-card-4 w3-panel w3-mobile w3-hide-large w3-hide-medium">
+<img src="./img/belgischevlag.jpg" style="width:100%"></img>
+	<div class="w3-container w3-white w3-center w3-mobile">		
+		<p>Ik ben naar België gekomen op 06/02/2016</p>
+	</div>
+</div>
+
+<div class="w3-card-4 w3-panel w3-mobile w3-hide-large w3-hide-medium">
+<img src="./img/hivsetlogo.jpg" style="width:100%"></img>
+	<div class="w3-container w3-white w3-center w3-mobile">		
+		<p>Ik heb Nederlands geleerd in het OKAN-onderwijs op HIVSET Turnhout. Ben naar daar daar geweest op 20/02/2016, en ben ongeveer 8 maanden daar gebleven.</p>
+	</div>
+</div>
+
+<div class="w3-card-4 w3-panel w3-mobile w3-hide-large w3-hide-medium">
+<img src="./img/immaculatalogo.jpg" style="width:100%"></img>
+	<div class="w3-container w3-white w3-center w3-mobile">		
+		<p>Ik studeer nu IT en Netwerken aan het Immaculata Instituut. Ik ben naar hier gekomen op 09/01/2017.</p>
 	</div>
 </div>
 
 
-
-<div class="w3-content w3-white">
-<div class="w3-container w3-section w3-content w3-padding-64">
-<h1 class="title">Test<span>Coming soon!</span></h1>
-</div>
-</div>
-
 <footer class="w3-bar w3-blue w3-block">
-	<div class="w3-container">
-	<p>test <a href="../GIPsite/ar/over_mij.html" class="w3-right">AR</a></p>
+	<div class="w3-container w3-block">
+		<p>© 2017 Karam Khalil <a href="../GIPsite/ar/over_mij.html" class="w3-right">AR</a></p>
+	<a href="https://github.com/karamk-immalle"><i style="margin: 0 0 10px 650px" class="fa fa-github w3-xlarge w3-hover-opacity w3-hide-small w3-hide-medium"></i></a>
+	<a href="https://github.com/karamk-immalle"><i style="margin: 0 0 10px 250px" class="fa fa-github w3-xlarge w3-hover-opacity w3-hide-large"></i></a> 	
 	</div>
 </footer>
 
