--- a/over_mij.html
+++ b/over_mij.html
@@ -22,6 +22,7 @@
 			<a href="fotoreportage.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Fotoreportage</a>
 		</div>
 	</div>
+	<a href="gip.html" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white w3-large">GIP</a>
 	<a href="over_mij" class="w3-bar-item w3-button w3-right w3-hover-white w3-large w3-white w3-hide-small" style="font-size:16px">Over mij</a>
 </div>
 </div>
@@ -30,6 +31,7 @@
   <a href="stage.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Stage</a>
   <a href="dagverslag.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Dagverslag</a>
   <a href="fotoreportage.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Fotoreportage</a>
+  <a href="gip.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">GIP</a>
   <a href="over_mij.html" class="w3-bar-item w3-button w3-padding-large w3-text-blue">Over mij</a>
 </div>
 
