--- a/fotoreportage.html
+++ b/fotoreportage.html
@@ -45,41 +45,41 @@
 
 <div style="padding:100px;" class="w3-content w3-panel w3-display-container">
 <div class="w3-display-container mySlides">
-  <img src="./img/IMG_1.jpg" style="width:100%; transform:rotate(180deg);">
+  <img src="./img/IMG_1.JPG" style="width:100%; transform:rotate(180deg);">
   <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
     Eerste dag op stage: Het is een groot gebouw. Ik was er nog maar een keer geweest. Ik was nerveus.
   </div>
 </div>
 <div class="w3-display-container mySlides">
-  <img src="./img/IMG_2.jpg" style="width:100%">
+  <img src="./img/IMG_2.JPG" style="width:100%">
   <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
     Dat was mijn bureau. Ik heb mijn eigen laptop meegebracht. Mijn stagebegeleider zat altijd naast mij.
   </div>
 </div>
 <div class="w3-display-container mySlides">
-  <img src="./img/IMG_3.jpg" style="width:50%; margin: 0 0 100px 200px; transform:rotate(90deg);">
+  <img src="./img/IMG_3.JPG" style="width:50%; margin: 0 0 100px 200px; transform:rotate(90deg);">
   <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
     Middagpauze:
 Ik was mijn boterham aan het eten. Het is Syrisch brood en er zit tijm en sesamzaadjes met olie tussen. De middagpauze duurt een uur, hij begint om 12:30 en eindigt om 13:30.
   </div>
 </div>
 <div class="w3-display-container mySlides">
-  <img src="./img/IMG_4.jpg" style="width:100%; transform:rotate(90deg);">
+  <img src="./img/IMG_4.JPG" style="width:100%; transform:rotate(90deg);">
   <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
     Ik heb hun geholpen om deze computers te testen. Het zijn stemcomputers.
   </div>
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="./img/IMG_5.jpg" style="width:100%; transform:rotate(90deg);">
+  <img src="./img/IMG_5.JPG" style="width:100%; transform:rotate(90deg);">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="./img/IMG_6.jpg" style="width:100%; transform:rotate(90deg);">
+  <img src="./img/IMG_6.JPG" style="width:100%; transform:rotate(90deg);">
 </div>
 
 <div class="w3-display-container mySlides">
-  <img src="./img/IMG_7.jpg" style="width:100%; transform: rotate(180deg);">
+  <img src="./img/IMG_7.JPG" style="width:100%; transform: rotate(180deg);">
   <div class="w3-display-bottomleft w3-container w3-padding-16 w3-blue">
     Terug na een week op stage: dit is mijn bushalte. Ik was blij want het was een toffe week en ik voelde me als iemand die in de gemeente werkt en niet als iemand die iets nodig heeft.
   </div>
