--- a/fotoreportage.html
+++ b/fotoreportage.html
@@ -42,7 +42,7 @@
 <div class="w3-blue w3-content w3-container">
 <p>U kunt de volledige presentatie bekijken door <a href="http://prezi.com/shj-f1wkqnqo/?utm_campaign=share&utm_medium=copy">hier</a> te klikken</p>
 </div>
-
+<div class ="w3-content w3-display-container" style="max-width:800px">
 <div style="padding:100px;" class="w3-content w3-panel w3-display-container">
 <div class="w3-display-container mySlides">
   <img src="./img/IMG_1.JPG" style="width:100%; transform:rotate(180deg);">
@@ -87,6 +87,7 @@ Ik was mijn boterham aan het eten. Het is Syrisch brood en er zit tijm en sesamz
 
 <button class="w3-button w3-display-right w3-blue" onclick="plusDivs(+1)">&#10095;</button>
 <button class="w3-button w3-display-left w3-blue" onclick="plusDivs(-1)">&#10094;</button>
+</div>
 </div>
 <footer class="w3-bar w3-blue w3-block">
 	<div class="w3-container w3-block">
