--- a/gip.html
+++ b/gip.html
@@ -59,6 +59,18 @@ Deze zijn in volledig eigen beheer. Het intern netwerk bevat de serverroom en 3 
  <div id="Demo3" class="w3-container w3-hide"> 
 	<a href="https://docs.google.com/document/d/1wNg1oO4GsuK9h6mr24XK407RsJqzOUwlCRkzZoQM8a4/edit?usp=sharing"> Bedrijfseconomische analyse</a>		
 </div>
+
+<button onclick="myFunction('Demo4')" class="w3-button w3-white w3-block w3-left-align w3-mobile w3-padding-large"><span class="w3-left">Web Applicatie</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
+ <div id="Demo4" class="w3-container w3-hide"> 
+			<a href="https://github.com/karamk-immalle/WebAppGIP"></a>
+</div>
+
+<button onclick="myFunction('Demo5')" class="w3-button w3-blue w3-block w3-left-align w3-mobile w3-padding-large"><span class="w3-left"> Remotr</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
+ <div id="Demo5" class="w3-container w3-hide"> 
+			<video width="600" height="320" class="w3-container w3-mobile" controls>
+			<source src="vid/SYSGIP.mp4" type="video/mp4">
+			</video>
+</div>
 </div>
 </div>
 
