--- a/gip.html
+++ b/gip.html
@@ -71,6 +71,13 @@ Deze zijn in volledig eigen beheer. Het intern netwerk bevat de serverroom en 3 
 			<source src="vid/SYSGIP.mp4" type="video/mp4">
 			</video>
 </div>
+
+<button onclick="myFunction('Demo6')" class="w3-button w3-white w3-block w3-left-align w3-mobile w3-padding-large"><span class="w3-left"> IT-Tapa</span> <i class="fa fa-chevron-down w3-right w3-xxlarge" aria-hidden="true"></i></button>
+ <div id="Demo6" class="w3-container w3-hide"> 
+			<video width="600" height="320" class="w3-container w3-mobile" controls>
+			<source src="vid/Officiele_Office_Mix-filmpje720p.mp4" type="video/mp4">
+			</video>
+</div>
 </div>
 </div>
 
